add fossify icons

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -308,6 +308,24 @@
 	<item drawable="fossify_file_manager_red" />
 	<item drawable="fossify_file_manager_teal" />
 	<item drawable="fossify_file_manager_yellow" />
+	<item drawable="fossify_gallery_amber" />
+	<item drawable="fossify_gallery_blue" />
+	<item drawable="fossify_gallery_bluegrey" />
+	<item drawable="fossify_gallery_brown" />
+	<item drawable="fossify_gallery_cyan" />
+	<item drawable="fossify_gallery_deep_orange" />
+	<item drawable="fossify_gallery_deep_purple" />
+	<item drawable="fossify_gallery_greyblack" />
+	<item drawable="fossify_gallery_indigo" />
+	<item drawable="fossify_gallery_light_blue" />
+	<item drawable="fossify_gallery_light_green" />
+	<item drawable="fossify_gallery_lime" />
+	<item drawable="fossify_gallery_pink" />
+	<item drawable="fossify_gallery_purple" />
+	<item drawable="fossify_gallery_orange" />
+	<item drawable="fossify_gallery_red" />
+	<item drawable="fossify_gallery_teal" />
+	<item drawable="fossify_gallery_yellow" />
 	<item drawable="fotmob_alt_1" />
 	<item drawable="freezer_alt_1" />
 	<item drawable="frost_for_facebook_alt_1" />
