add fossify icons

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -326,6 +326,24 @@
 	<item drawable="fossify_gallery_red" />
 	<item drawable="fossify_gallery_teal" />
 	<item drawable="fossify_gallery_yellow" />
+	<item drawable="fossify_keyboard_amber" />
+	<item drawable="fossify_keyboard_blue" />
+	<item drawable="fossify_keyboard_bluegrey" />
+	<item drawable="fossify_keyboard_brown" />
+	<item drawable="fossify_keyboard_cyan" />
+	<item drawable="fossify_keyboard_deep_orange" />
+	<item drawable="fossify_keyboard_deep_purple" />
+	<item drawable="fossify_keyboard_greyblack" />
+	<item drawable="fossify_keyboard_indigo" />
+	<item drawable="fossify_keyboard_light_blue" />
+	<item drawable="fossify_keyboard_light_green" />
+	<item drawable="fossify_keyboard_lime" />
+	<item drawable="fossify_keyboard_pink" />
+	<item drawable="fossify_keyboard_purple" />
+	<item drawable="fossify_keyboard_orange" />
+	<item drawable="fossify_keyboard_red" />
+	<item drawable="fossify_keyboard_teal" />
+	<item drawable="fossify_keyboard_yellow" />
 	<item drawable="fotmob_alt_1" />
 	<item drawable="freezer_alt_1" />
 	<item drawable="frost_for_facebook_alt_1" />
