add fossify icons

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -15401,4 +15401,22 @@
 	<item component="ComponentInfo{org.fossify.keyboard/org.fossify.keyboard.activities.SplashActivity.Red}" drawable="fossify_keyboard_red" />
 	<item component="ComponentInfo{org.fossify.keyboard/org.fossify.keyboard.activities.SplashActivity.Teal}" drawable="fossify_keyboard_teal" />
 	<item component="ComponentInfo{org.fossify.keyboard/org.fossify.keyboard.activities.SplashActivity.Yellow}" drawable="fossify_keyboard_yellow" />
+	<item component="ComponentInfo{org.fossify.launcher/org.fossify.launcher.activities.SplashActivity.Amber}" drawable="fossify_launcher_amber" />
+	<item component="ComponentInfo{org.fossify.launcher/org.fossify.launcher.activities.SplashActivity.Blue}" drawable="fossify_launcher_blue" />
+	<item component="ComponentInfo{org.fossify.launcher/org.fossify.launcher.activities.SplashActivity.Blue_Grey}" drawable="fossify_launcher_blue_grey" />
+	<item component="ComponentInfo{org.fossify.launcher/org.fossify.launcher.activities.SplashActivity.Brown}" drawable="fossify_launcher_brown" />
+	<item component="ComponentInfo{org.fossify.launcher/org.fossify.launcher.activities.SplashActivity.Cyan}" drawable="fossify_launcher_cyan" />
+	<item component="ComponentInfo{org.fossify.launcher/org.fossify.launcher.activities.SplashActivity.Deep_Orange}" drawable="fossify_launcher_deep_orange" />
+	<item component="ComponentInfo{org.fossify.launcher/org.fossify.launcher.activities.SplashActivity.Deep_Purple}" drawable="fossify_launcher_deep_purple" />
+	<item component="ComponentInfo{org.fossify.launcher/org.fossify.launcher.activities.SplashActivity.Grey_Black}" drawable="fossify_launcher_grey_black" />
+	<item component="ComponentInfo{org.fossify.launcher/org.fossify.launcher.activities.SplashActivity.Indigo}" drawable="fossify_launcher_indigo" />
+	<item component="ComponentInfo{org.fossify.launcher/org.fossify.launcher.activities.SplashActivity.Light_Blue}" drawable="fossify_launcher_light_blue" />
+	<item component="ComponentInfo{org.fossify.launcher/org.fossify.launcher.activities.SplashActivity.Light_Green}" drawable="fossify_launcher_light_green" />
+	<item component="ComponentInfo{org.fossify.launcher/org.fossify.launcher.activities.SplashActivity.Lime}" drawable="fossify_launcher_lime" />
+	<item component="ComponentInfo{org.fossify.launcher/org.fossify.launcher.activities.SplashActivity.Orange}" drawable="fossify_launcher_orange" />
+	<item component="ComponentInfo{org.fossify.launcher/org.fossify.launcher.activities.SplashActivity.Pink}" drawable="fossify_launcher_pink" />
+	<item component="ComponentInfo{org.fossify.launcher/org.fossify.launcher.activities.SplashActivity.Purple}" drawable="fossify_launcher_purple" />
+	<item component="ComponentInfo{org.fossify.launcher/org.fossify.launcher.activities.SplashActivity.Red}" drawable="fossify_launcher_red" />
+	<item component="ComponentInfo{org.fossify.launcher/org.fossify.launcher.activities.SplashActivity.Teal}" drawable="fossify_launcher_teal" />
+	<item component="ComponentInfo{org.fossify.launcher/org.fossify.launcher.activities.SplashActivity.Yellow}" drawable="fossify_launcher_yellow" />
 </resources>
