--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -344,6 +344,24 @@
 	<item drawable="fossify_keyboard_red" />
 	<item drawable="fossify_keyboard_teal" />
 	<item drawable="fossify_keyboard_yellow" />
+	<item drawable="fossify_launcher_amber" />
+	<item drawable="fossify_launcher_blue" />
+	<item drawable="fossify_launcher_bluegrey" />
+	<item drawable="fossify_launcher_brown" />
+	<item drawable="fossify_launcher_cyan" />
+	<item drawable="fossify_launcher_deep_orange" />
+	<item drawable="fossify_launcher_deep_purple" />
+	<item drawable="fossify_launcher_greyblack" />
+	<item drawable="fossify_launcher_indigo" />
+	<item drawable="fossify_launcher_light_blue" />
+	<item drawable="fossify_launcher_light_green" />
+	<item drawable="fossify_launcher_lime" />
+	<item drawable="fossify_launcher_pink" />
+	<item drawable="fossify_launcher_purple" />
+	<item drawable="fossify_launcher_orange" />
+	<item drawable="fossify_launcher_red" />
+	<item drawable="fossify_launcher_teal" />
+	<item drawable="fossify_launcher_yellow" />
 	<item drawable="fotmob_alt_1" />
 	<item drawable="freezer_alt_1" />
 	<item drawable="frost_for_facebook_alt_1" />
