add fossify icons

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -15419,4 +15419,22 @@
 	<item component="ComponentInfo{org.fossify.launcher/org.fossify.launcher.activities.SplashActivity.Red}" drawable="fossify_launcher_red" />
 	<item component="ComponentInfo{org.fossify.launcher/org.fossify.launcher.activities.SplashActivity.Teal}" drawable="fossify_launcher_teal" />
 	<item component="ComponentInfo{org.fossify.launcher/org.fossify.launcher.activities.SplashActivity.Yellow}" drawable="fossify_launcher_yellow" />
+	<item component="ComponentInfo{org.fossify.messages/org.fossify.messages.activities.SplashActivity.Amber}" drawable="fossify_messages_amber" />
+	<item component="ComponentInfo{org.fossify.messages/org.fossify.messages.activities.SplashActivity.Blue}" drawable="fossify_messages_blue" />
+	<item component="ComponentInfo{org.fossify.messages/org.fossify.messages.activities.SplashActivity.Blue_Grey}" drawable="fossify_messages_blue_grey" />
+	<item component="ComponentInfo{org.fossify.messages/org.fossify.messages.activities.SplashActivity.Brown}" drawable="fossify_messages_brown" />
+	<item component="ComponentInfo{org.fossify.messages/org.fossify.messages.activities.SplashActivity.Cyan}" drawable="fossify_messages_cyan" />
+	<item component="ComponentInfo{org.fossify.messages/org.fossify.messages.activities.SplashActivity.Deep_Orange}" drawable="fossify_messages_deep_orange" />
+	<item component="ComponentInfo{org.fossify.messages/org.fossify.messages.activities.SplashActivity.Deep_Purple}" drawable="fossify_messages_deep_purple" />
+	<item component="ComponentInfo{org.fossify.messages/org.fossify.messages.activities.SplashActivity.Grey_Black}" drawable="fossify_messages_grey_black" />
+	<item component="ComponentInfo{org.fossify.messages/org.fossify.messages.activities.SplashActivity.Indigo}" drawable="fossify_messages_indigo" />
+	<item component="ComponentInfo{org.fossify.messages/org.fossify.messages.activities.SplashActivity.Light_Blue}" drawable="fossify_messages_light_blue" />
+	<item component="ComponentInfo{org.fossify.messages/org.fossify.messages.activities.SplashActivity.Light_Green}" drawable="fossify_messages_light_green" />
+	<item component="ComponentInfo{org.fossify.messages/org.fossify.messages.activities.SplashActivity.Lime}" drawable="fossify_messages_lime" />
+	<item component="ComponentInfo{org.fossify.messages/org.fossify.messages.activities.SplashActivity.Orange}" drawable="fossify_messages_orange" />
+	<item component="ComponentInfo{org.fossify.messages/org.fossify.messages.activities.SplashActivity.Pink}" drawable="fossify_messages_pink" />
+	<item component="ComponentInfo{org.fossify.messages/org.fossify.messages.activities.SplashActivity.Purple}" drawable="fossify_messages_purple" />
+	<item component="ComponentInfo{org.fossify.messages/org.fossify.messages.activities.SplashActivity.Red}" drawable="fossify_messages_red" />
+	<item component="ComponentInfo{org.fossify.messages/org.fossify.messages.activities.SplashActivity.Teal}" drawable="fossify_messages_teal" />
+	<item component="ComponentInfo{org.fossify.messages/org.fossify.messages.activities.SplashActivity.Yellow}" drawable="fossify_messages_yellow" />
 </resources>
