--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -362,6 +362,24 @@
 	<item drawable="fossify_launcher_red" />
 	<item drawable="fossify_launcher_teal" />
 	<item drawable="fossify_launcher_yellow" />
+	<item drawable="fossify_messages_amber" />
+	<item drawable="fossify_messages_blue" />
+	<item drawable="fossify_messages_bluegrey" />
+	<item drawable="fossify_messages_brown" />
+	<item drawable="fossify_messages_cyan" />
+	<item drawable="fossify_messages_deep_orange" />
+	<item drawable="fossify_messages_deep_purple" />
+	<item drawable="fossify_messages_greyblack" />
+	<item drawable="fossify_messages_indigo" />
+	<item drawable="fossify_messages_light_blue" />
+	<item drawable="fossify_messages_light_green" />
+	<item drawable="fossify_messages_lime" />
+	<item drawable="fossify_messages_pink" />
+	<item drawable="fossify_messages_purple" />
+	<item drawable="fossify_messages_orange" />
+	<item drawable="fossify_messages_red" />
+	<item drawable="fossify_messages_teal" />
+	<item drawable="fossify_messages_yellow" />
 	<item drawable="fotmob_alt_1" />
 	<item drawable="freezer_alt_1" />
 	<item drawable="frost_for_facebook_alt_1" />
