--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -380,6 +380,24 @@
 	<item drawable="fossify_messages_red" />
 	<item drawable="fossify_messages_teal" />
 	<item drawable="fossify_messages_yellow" />
+	<item drawable="fossify_music_player_amber" />
+	<item drawable="fossify_music_player_blue" />
+	<item drawable="fossify_music_player_bluegrey" />
+	<item drawable="fossify_music_player_brown" />
+	<item drawable="fossify_music_player_cyan" />
+	<item drawable="fossify_music_player_deep_orange" />
+	<item drawable="fossify_music_player_deep_purple" />
+	<item drawable="fossify_music_player_greyblack" />
+	<item drawable="fossify_music_player_indigo" />
+	<item drawable="fossify_music_player_light_blue" />
+	<item drawable="fossify_music_player_light_green" />
+	<item drawable="fossify_music_player_lime" />
+	<item drawable="fossify_music_player_pink" />
+	<item drawable="fossify_music_player_purple" />
+	<item drawable="fossify_music_player_orange" />
+	<item drawable="fossify_music_player_red" />
+	<item drawable="fossify_music_player_teal" />
+	<item drawable="fossify_music_player_yellow" />
 	<item drawable="fotmob_alt_1" />
 	<item drawable="freezer_alt_1" />
 	<item drawable="frost_for_facebook_alt_1" />
