add fossify icons

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -15455,4 +15455,22 @@
 	<item component="ComponentInfo{org.fossify.musicplayer/org.fossify.musicplayer.activities.SplashActivity.Red}" drawable="fossify_music_player_red" />
 	<item component="ComponentInfo{org.fossify.musicplayer/org.fossify.musicplayer.activities.SplashActivity.Teal}" drawable="fossify_music_player_teal" />
 	<item component="ComponentInfo{org.fossify.musicplayer/org.fossify.musicplayer.activities.SplashActivity.Yellow}" drawable="fossify_music_player_yellow" />
+	<item component="ComponentInfo{org.fossify.notes/org.fossify.notes.activities.SplashActivity.Amber}" drawable="fossify_notes_amber" />
+	<item component="ComponentInfo{org.fossify.notes/org.fossify.notes.activities.SplashActivity.Blue}" drawable="fossify_notes_blue" />
+	<item component="ComponentInfo{org.fossify.notes/org.fossify.notes.activities.SplashActivity.Blue_Grey}" drawable="fossify_notes_blue_grey" />
+	<item component="ComponentInfo{org.fossify.notes/org.fossify.notes.activities.SplashActivity.Brown}" drawable="fossify_notes_brown" />
+	<item component="ComponentInfo{org.fossify.notes/org.fossify.notes.activities.SplashActivity.Cyan}" drawable="fossify_notes_cyan" />
+	<item component="ComponentInfo{org.fossify.notes/org.fossify.notes.activities.SplashActivity.Deep_Orange}" drawable="fossify_notes_deep_orange" />
+	<item component="ComponentInfo{org.fossify.notes/org.fossify.notes.activities.SplashActivity.Deep_Purple}" drawable="fossify_notes_deep_purple" />
+	<item component="ComponentInfo{org.fossify.notes/org.fossify.notes.activities.SplashActivity.Grey_Black}" drawable="fossify_notes_grey_black" />
+	<item component="ComponentInfo{org.fossify.notes/org.fossify.notes.activities.SplashActivity.Indigo}" drawable="fossify_notes_indigo" />
+	<item component="ComponentInfo{org.fossify.notes/org.fossify.notes.activities.SplashActivity.Light_Blue}" drawable="fossify_notes_light_blue" />
+	<item component="ComponentInfo{org.fossify.notes/org.fossify.notes.activities.SplashActivity.Light_Green}" drawable="fossify_notes_light_green" />
+	<item component="ComponentInfo{org.fossify.notes/org.fossify.notes.activities.SplashActivity.Lime}" drawable="fossify_notes_lime" />
+	<item component="ComponentInfo{org.fossify.notes/org.fossify.notes.activities.SplashActivity.Orange}" drawable="fossify_notes_orange" />
+	<item component="ComponentInfo{org.fossify.notes/org.fossify.notes.activities.SplashActivity.Pink}" drawable="fossify_notes_pink" />
+	<item component="ComponentInfo{org.fossify.notes/org.fossify.notes.activities.SplashActivity.Purple}" drawable="fossify_notes_purple" />
+	<item component="ComponentInfo{org.fossify.notes/org.fossify.notes.activities.SplashActivity.Red}" drawable="fossify_notes_red" />
+	<item component="ComponentInfo{org.fossify.notes/org.fossify.notes.activities.SplashActivity.Teal}" drawable="fossify_notes_teal" />
+	<item component="ComponentInfo{org.fossify.notes/org.fossify.notes.activities.SplashActivity.Yellow}" drawable="fossify_notes_yellow" />
 </resources>
