--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -398,6 +398,24 @@
 	<item drawable="fossify_music_player_red" />
 	<item drawable="fossify_music_player_teal" />
 	<item drawable="fossify_music_player_yellow" />
+	<item drawable="fossify_notes_amber" />
+	<item drawable="fossify_notes_blue" />
+	<item drawable="fossify_notes_bluegrey" />
+	<item drawable="fossify_notes_brown" />
+	<item drawable="fossify_notes_cyan" />
+	<item drawable="fossify_notes_deep_orange" />
+	<item drawable="fossify_notes_deep_purple" />
+	<item drawable="fossify_notes_greyblack" />
+	<item drawable="fossify_notes_indigo" />
+	<item drawable="fossify_notes_light_blue" />
+	<item drawable="fossify_notes_light_green" />
+	<item drawable="fossify_notes_lime" />
+	<item drawable="fossify_notes_pink" />
+	<item drawable="fossify_notes_purple" />
+	<item drawable="fossify_notes_orange" />
+	<item drawable="fossify_notes_red" />
+	<item drawable="fossify_notes_teal" />
+	<item drawable="fossify_notes_yellow" />
 	<item drawable="fotmob_alt_1" />
 	<item drawable="freezer_alt_1" />
 	<item drawable="frost_for_facebook_alt_1" />
