add fossify icons

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -15473,4 +15473,22 @@
 	<item component="ComponentInfo{org.fossify.notes/org.fossify.notes.activities.SplashActivity.Red}" drawable="fossify_notes_red" />
 	<item component="ComponentInfo{org.fossify.notes/org.fossify.notes.activities.SplashActivity.Teal}" drawable="fossify_notes_teal" />
 	<item component="ComponentInfo{org.fossify.notes/org.fossify.notes.activities.SplashActivity.Yellow}" drawable="fossify_notes_yellow" />
+	<item component="ComponentInfo{org.fossify.phone/org.fossify.phone.activities.SplashActivity.Amber}" drawable="fossify_phone_amber" />
+	<item component="ComponentInfo{org.fossify.phone/org.fossify.phone.activities.SplashActivity.Blue}" drawable="fossify_phone_blue" />
+	<item component="ComponentInfo{org.fossify.phone/org.fossify.phone.activities.SplashActivity.Blue_Grey}" drawable="fossify_phone_blue_grey" />
+	<item component="ComponentInfo{org.fossify.phone/org.fossify.phone.activities.SplashActivity.Brown}" drawable="fossify_phone_brown" />
+	<item component="ComponentInfo{org.fossify.phone/org.fossify.phone.activities.SplashActivity.Cyan}" drawable="fossify_phone_cyan" />
+	<item component="ComponentInfo{org.fossify.phone/org.fossify.phone.activities.SplashActivity.Deep_Orange}" drawable="fossify_phone_deep_orange" />
+	<item component="ComponentInfo{org.fossify.phone/org.fossify.phone.activities.SplashActivity.Deep_Purple}" drawable="fossify_phone_deep_purple" />
+	<item component="ComponentInfo{org.fossify.phone/org.fossify.phone.activities.SplashActivity.Grey_Black}" drawable="fossify_phone_grey_black" />
+	<item component="ComponentInfo{org.fossify.phone/org.fossify.phone.activities.SplashActivity.Indigo}" drawable="fossify_phone_indigo" />
+	<item component="ComponentInfo{org.fossify.phone/org.fossify.phone.activities.SplashActivity.Light_Blue}" drawable="fossify_phone_light_blue" />
+	<item component="ComponentInfo{org.fossify.phone/org.fossify.phone.activities.SplashActivity.Light_Green}" drawable="fossify_phone_light_green" />
+	<item component="ComponentInfo{org.fossify.phone/org.fossify.phone.activities.SplashActivity.Lime}" drawable="fossify_phone_lime" />
+	<item component="ComponentInfo{org.fossify.phone/org.fossify.phone.activities.SplashActivity.Orange}" drawable="fossify_phone_orange" />
+	<item component="ComponentInfo{org.fossify.phone/org.fossify.phone.activities.SplashActivity.Pink}" drawable="fossify_phone_pink" />
+	<item component="ComponentInfo{org.fossify.phone/org.fossify.phone.activities.SplashActivity.Purple}" drawable="fossify_phone_purple" />
+	<item component="ComponentInfo{org.fossify.phone/org.fossify.phone.activities.SplashActivity.Red}" drawable="fossify_phone_red" />
+	<item component="ComponentInfo{org.fossify.phone/org.fossify.phone.activities.SplashActivity.Teal}" drawable="fossify_phone_teal" />
+	<item component="ComponentInfo{org.fossify.phone/org.fossify.phone.activities.SplashActivity.Yellow}" drawable="fossify_phone_yellow" />
 </resources>
