--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -416,6 +416,24 @@
 	<item drawable="fossify_notes_red" />
 	<item drawable="fossify_notes_teal" />
 	<item drawable="fossify_notes_yellow" />
+	<item drawable="fossify_phone_amber" />
+	<item drawable="fossify_phone_blue" />
+	<item drawable="fossify_phone_bluegrey" />
+	<item drawable="fossify_phone_brown" />
+	<item drawable="fossify_phone_cyan" />
+	<item drawable="fossify_phone_deep_orange" />
+	<item drawable="fossify_phone_deep_purple" />
+	<item drawable="fossify_phone_greyblack" />
+	<item drawable="fossify_phone_indigo" />
+	<item drawable="fossify_phone_light_blue" />
+	<item drawable="fossify_phone_light_green" />
+	<item drawable="fossify_phone_lime" />
+	<item drawable="fossify_phone_pink" />
+	<item drawable="fossify_phone_purple" />
+	<item drawable="fossify_phone_orange" />
+	<item drawable="fossify_phone_red" />
+	<item drawable="fossify_phone_teal" />
+	<item drawable="fossify_phone_yellow" />
 	<item drawable="fotmob_alt_1" />
 	<item drawable="freezer_alt_1" />
 	<item drawable="frost_for_facebook_alt_1" />
