--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -434,6 +434,24 @@
 	<item drawable="fossify_phone_red" />
 	<item drawable="fossify_phone_teal" />
 	<item drawable="fossify_phone_yellow" />
+	<item drawable="fossify_voice_recorder_amber" />
+	<item drawable="fossify_voice_recorder_blue" />
+	<item drawable="fossify_voice_recorder_bluegrey" />
+	<item drawable="fossify_voice_recorder_brown" />
+	<item drawable="fossify_voice_recorder_cyan" />
+	<item drawable="fossify_voice_recorder_deep_orange" />
+	<item drawable="fossify_voice_recorder_deep_purple" />
+	<item drawable="fossify_voice_recorder_greyblack" />
+	<item drawable="fossify_voice_recorder_indigo" />
+	<item drawable="fossify_voice_recorder_light_blue" />
+	<item drawable="fossify_voice_recorder_light_green" />
+	<item drawable="fossify_voice_recorder_lime" />
+	<item drawable="fossify_voice_recorder_pink" />
+	<item drawable="fossify_voice_recorder_purple" />
+	<item drawable="fossify_voice_recorder_orange" />
+	<item drawable="fossify_voice_recorder_red" />
+	<item drawable="fossify_voice_recorder_teal" />
+	<item drawable="fossify_voice_recorder_yellow" />
 	<item drawable="fotmob_alt_1" />
 	<item drawable="freezer_alt_1" />
 	<item drawable="frost_for_facebook_alt_1" />
