Add Security Bank + Rename old Security Bank to Security Bank Online

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -8387,7 +8387,7 @@
 	<item component="ComponentInfo{com.securenettech.cove6production/com.securenettech.cove6production.MainActivity}" drawable="cove_security" />
 	<item component="ComponentInfo{com.securew2.paladin/com.securew2.paladin.android.activity.MainActivity}" drawable="securew2" />
 	<item component="ComponentInfo{com.security.xvpn.z35kb/com.security.xvpn.z35kb.SplashActivity}" drawable="vpn" />
-	<item component="ComponentInfo{com.securitybank.online/com.securitybank.online.app.activity.EntryActivity}" drawable="security_bank" />
+	<item component="ComponentInfo{com.securitybank.online/com.securitybank.online.app.activity.EntryActivity}" drawable="security_bank_online" />
 	<item component="ComponentInfo{com.secuso.privacyFriendlyCodeScanner/com.secuso.privacyfriendlycodescanner.qrscanner.ui.activities.SplashActivity}" drawable="secuso_qr_scanner" />
 	<item component="ComponentInfo{com.secuso.torchlight2/com.secuso.torchlight2.ui.SplashActivity}" drawable="secuso_torchlight" />
 	<item component="ComponentInfo{com.seekingalpha.webwrapper/sa.activity.MainActivity}" drawable="seeking_alpha" />
