--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -9174,7 +9174,7 @@
 	<item drawable="securew2" />
 	<item drawable="securid" />
 	<item drawable="securify" />
-	<item drawable="security_bank" />
+	<item drawable="security_bank_online" />
 	<item drawable="secuso_2048" />
 	<item drawable="secuso_aktivpause_to_go" />
 	<item drawable="secuso_backup" />
