--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -5085,6 +5085,7 @@
 	<item component="ComponentInfo{com.htc.sense.mms/com.htc.sense.mms.ui.ConversationList}" drawable="sms_alt_3" />
 	<item component="ComponentInfo{com.htetznaing.adbotg/com.htetznaing.adbotg.MainActivity}" drawable="adb_otg" />
 	<item component="ComponentInfo{com.htetznaing.zfont2/com.htetznaing.zfont2.ui.StartingActivity}" drawable="zfont_3" />
+	<item component="ComponentInfo{com.htetznaing.zfont2/com.htetznaing.zfont4.MainActivity}" drawable="zfont_3" />
 	<item component="ComponentInfo{com.hualai/com.hualai.home.StartActivity}" drawable="wyze" />
 	<item component="ComponentInfo{com.huami.watch.hmwatchmanager/com.xiaomi.hm.health.activity.StartUpActivity}" drawable="zepp" />
 	<item component="ComponentInfo{com.huaqin.FM/com.huaqin.FM.FM}" drawable="fm_radio" />
