--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -293,6 +293,7 @@
 	<item component="ComponentInfo{app.meditasyon/app.meditasyon.ui.splash.view.SplashActivity}" drawable="meditopia" />
 	<item component="ComponentInfo{app.mihon.debug/eu.kanade.tachiyomi.ui.main.MainActivity}" drawable="mihon_preview" />
 	<item component="ComponentInfo{app.mihon/eu.kanade.tachiyomi.ui.main.MainActivity}" drawable="mihon" />
+	<item component="ComponentInfo{app.mlauncher/com.github.droidworksstudio.mlauncher.MainActivity}" drawable="mlauncher" />
 	<item component="ComponentInfo{app.mlauncher/com.github.hecodes2much.mlauncher.MainActivity}" drawable="mlauncher" />
 	<item component="ComponentInfo{app.moertel.retro.iconpack.neon/app.moertel.retro.iconpack.activities.SplashActivity}" drawable="retro_mode_icon_pack" />
 	<item component="ComponentInfo{app.mytoyota.toyota.com.mytoyota/com.toyota.myservices.StartingActivity}" drawable="myt_by_toyota" />
@@ -846,6 +847,7 @@
 	<item component="ComponentInfo{co.benx.weverse/co.benx.weverse.ui.scene.splash.SplashActivity}" drawable="weverse" />
 	<item component="ComponentInfo{co.bird.android/co.bird.android.app.feature.main.MainActivity}" drawable="bird" />
 	<item component="ComponentInfo{co.bitx.android.wallet/co.bitx.android.wallet.app.MainActivity}" drawable="luno" />
+	<item component="ComponentInfo{co.brainly/co.brainly.feature.splash.impl.SplashActivity}" drawable="brainly" />
 	<item component="ComponentInfo{co.brainly/com.brainly.StartActivity}" drawable="brainly" />
 	<item component="ComponentInfo{co.byte/co.v2.MainActivity}" drawable="byte_video" />
 	<item component="ComponentInfo{co.bytemark.presto/co.bytemark.splash.SplashScreenActivity}" drawable="presto_e_tickets" />
@@ -5935,6 +5937,7 @@
 	<item component="ComponentInfo{com.lenovo.FileBrowser/com.lenovo.FileBrowser.activities.FileBrowserMain}" drawable="lenovo_file_browser" />
 	<item component="ComponentInfo{com.lenovo.StkSelection/com.lenovo.StkSelection.StkSelection}" drawable="sim_toolkit" />
 	<item component="ComponentInfo{com.lenovo.anyshare.gps/com.lenovo.anyshare.ApMainActivity}" drawable="share_it" />
+	<item component="ComponentInfo{com.lenovo.anyshare.gps/com.lenovo.anyshare.ApMainActivityA}" drawable="share_it" />
 	<item component="ComponentInfo{com.lenovo.app.Calendar/com.lenovo.app.Calendar.MonthActivityNew}" drawable="calendar" />
 	<item component="ComponentInfo{com.lenovo.app.Calendar/com.lenovo.app.Calendar.MonthUI}" drawable="calendar" />
 	<item component="ComponentInfo{com.lenovo.calendar/com.lenovo.calendar.AllInOneActivity}" drawable="calendar" />
@@ -10051,6 +10054,7 @@
 	<item component="ComponentInfo{com.tmob.AveaOIM/com.avea.oim.newlogin.splash.SplashActivity}" drawable="turk_telekom" />
 	<item component="ComponentInfo{com.tmob.AveaOIM/moim.android.init.SplashActivity}" drawable="turk_telekom" />
 	<item component="ComponentInfo{com.tmobile.money/crc64944e23a50535ca4e.MainActivity}" drawable="t_mobile_money" />
+	<item component="ComponentInfo{com.tmobile.pr.mytmobile/com.telekom.tworld.dashboard.DashboardActivity}" drawable="t_mobile" />
 	<item component="ComponentInfo{com.tmobile.pr.mytmobile/com.tmobile.pr.mytmobile.MyTMobileActivity}" drawable="t_mobile" />
 	<item component="ComponentInfo{com.tmobile.tuesdays/com.telekom.tworld.dashboard.DashboardActivity}" drawable="t_mobile_life" />
 	<item component="ComponentInfo{com.tmobile.tuesdays/com.telekom.tworld.launcher.main.LauncherActivity}" drawable="t_mobile_life" />
@@ -13996,6 +14000,7 @@
 	<item component="ComponentInfo{org.telegram.messenger.beta/org.telegram.ui.LaunchActivity}" drawable="telegram_foss" />
 	<item component="ComponentInfo{org.telegram.messenger.web/org.telegram.messenger.DefaultIcon}" drawable="telegram" />
 	<item component="ComponentInfo{org.telegram.messenger.web/org.telegram.messenger.TurboIcon}" drawable="telegram_turbo" />
+	<item component="ComponentInfo{org.telegram.messenger.web/org.telegram.messenger.VintageIcon}" drawable="telegram_vintage" />
 	<item component="ComponentInfo{org.telegram.messenger.web/org.telegram.ui.LaunchActivity}" drawable="telegram" />
 	<item component="ComponentInfo{org.telegram.messenger/com.exteragram.messenger.DefaultIcon}" drawable="ayugram" />
 	<item component="ComponentInfo{org.telegram.messenger/org.telegram.messenger.AquaIcon}" drawable="telegram_aqua" />
