Add icons + ComponentInfos

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -1314,6 +1314,7 @@
 	<item component="ComponentInfo{com.ally.MobileBanking/com.ally.MobileBanking.SplashScreen}" drawable="ally_mobile" />
 	<item component="ComponentInfo{com.almalence.opencam/com.almalence.opencam.MainScreen}" drawable="a_better_camera" />
 	<item component="ComponentInfo{com.almalence.opencam_plus/com.almalence.opencam_plus.MainScreen}" drawable="a_better_camera" />
+	<item component="ComponentInfo{com.aloha.browser/com.alohamobile.browser.OldIcon}" drawable="aloha_browser" />
 	<item component="ComponentInfo{com.aloha.browser/com.alohamobile.browser.presentation.launcher.LauncherActivity}" drawable="aloha_browser" />
 	<item component="ComponentInfo{com.alohamobile.browser.lite/com.alohamobile.browser.lite.presentation.launcher.LauncherActivity}" drawable="aloha_browser" />
 	<item component="ComponentInfo{com.alohamobile.browser/com.alohamobile.browser.presentation.launcher.LauncherActivity}" drawable="aloha_browser" />
@@ -2631,6 +2632,7 @@
 	<item component="ComponentInfo{com.camsam/de.blitzer.activity.SplashScreen}" drawable="blitzer_de" />
 	<item component="ComponentInfo{com.camvision.qrcode.barcode.reader/com.camvision.qrcode.barcode.reader.main.Qr2MainActivity}" drawable="qr_and_barcode_scanner" />
 	<item component="ComponentInfo{com.canadapost.android/ca.canadapost.SplashActivity}" drawable="canada_post" />
+	<item component="ComponentInfo{com.canadapost.android/ca.canadapost.WelcomeActivity}" drawable="canada_post" />
 	<item component="ComponentInfo{com.canadiantire.triangle/ca.triangle.app.splash_screen.SplashActivity}" drawable="triangle" />
 	<item component="ComponentInfo{com.canal.android.canal/com.canal.ui.mobile.MainActivity}" drawable="canal_plus" />
 	<item component="ComponentInfo{com.canarabank.mobility/com.canarabank.mobility.MainActivity}" drawable="bank" />
@@ -14310,6 +14312,7 @@
 	<item component="ComponentInfo{rainbowforkwgt.kustom.pack/org.kustom.api.dashboard.DashboardActivity}" drawable="rainbow_kwgt" />
 	<item component="ComponentInfo{rasel.lunar.launcher/rasel.lunar.launcher.LauncherActivity}" drawable="lunar_launcher" />
 	<item component="ComponentInfo{rc.appradio.android/com.radiocanada.audio.ui.main.DeepLinkActivity}" drawable="radio_canada_ohdio" />
+	<item component="ComponentInfo{rc.appradio.android/com.radiocanada.audio.ui.main.MainActivity}" drawable="radio_canada_ohdio" />
 	<item component="ComponentInfo{re.free.mobile.android.vvm/fr.freemobile.android.vvm.customui.launchscreens.FirstLaunchActivity}" drawable="free_reunion_visual_voicemail" />
 	<item component="ComponentInfo{re.sova.five/re.sova.five.EventIcon7}" drawable="sova_v_re" />
 	<item component="ComponentInfo{re.sova.five/re.sova.five.OffName}" drawable="vkontakte" />
